<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_meeting_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controler.activity.AddNewMeetingActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/main_layout_add_meeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/toolbar_add_meeting" />

            <LinearLayout
                android:id="@+id/layout_add_meeting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/donnez_l_objet_de_la_r_union_ici">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/meeting_object"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#F7F5F8"
                        android:padding="2dp"
                        android:textColor="#322D39"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/place_selection_informations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:background="#F7F5F8"
                    android:gravity="center"
                    android:paddingBottom="4dp"
                    android:text="@string/selectionnez_votre_salle_de_r_union"
                    android:textColor="#322D39"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:id="@+id/spinner_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="8dp"
                    android:background="#F7F5F8"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:paddingBottom="2dp"
                    android:weightSum="100">

                    <Spinner
                        android:id="@+id/spinner_place"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="99" />
                    <!--    after add spinner create a spinner layout: spinner_places-->
                    <TextView
                        android:id="@+id/place_choice"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_time_start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="2dp"
                    android:weightSum="100">

                    <TextView
                        android:id="@+id/enterDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="44"
                        android:gravity="center"
                        android:hint="@string/date_de_la_reunion"
                        android:padding="2dp"
                        android:textColor="#322D39"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="56"
                        android:orientation="vertical"
                        android:weightSum="100">

                        <TextView
                            android:id="@+id/time_start_dialogbox"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_margin="2dp"
                            android:layout_weight="50"
                            android:background="#F8F5F5"
                            android:gravity="center"
                            android:hint="@string/heure_de_debut"
                            android:padding="2dp"
                            android:textColor="#322D39"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/time_end_dialogbox"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_margin="2dp"
                            android:layout_weight="50"
                            android:background="#F7F5F8"
                            android:gravity="center"
                            android:hint="@string/heure_de_fin"
                            android:padding="2dp"
                            android:textColor="#322D39"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout

                    android:id="@+id/layout_participants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_marginTop="2dp"
                    android:orientation="vertical"
                    android:padding="2dp">

                    <LinearLayout
                        android:id="@+id/layout_participants_mails"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="100"
                        android:background="#F7F5F8"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="90"
                            android:hint="@string/courriel_du_participant">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/enter_participant_mail"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:textColor="#322D39"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/add_mails_button"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="10"
                            android:background="@drawable/ic_add_black_10dp"
                            android:gravity="center" />

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/add_meeting_mails_list_recyclerview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        tools:listitem="@layout/fragment_mail" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/createNewMeeting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/colorPrimary"
                    android:shadowColor="#AEAAAF"
                    android:text="@string/sauvegardez_la_r_union"
                    android:textColor="#F7F5F8"
                    android:textStyle="bold" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
