...
        android:textSize="22sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_meeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        app:backgroundTint="#DA0323"
...
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/toolbar_meeting" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_meetings_for_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="LinearLayoutManager" />


        </LinearLayout>
...
