<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/back_button_add_meeting"
        android:icon="@drawable/ic_arrow_back_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/retour">
    </item>

</menu>